Update Java 21 & 1.20.6